[package]
name = "minimal_mult"
version = "0.1.0"
edition = "2024"

[dependencies]
seq-macro = "0.3.5"
ark-ff = { path = "../arkworks-algebra/ff" }
ark-ff-macros = { path = "../arkworks-algebra/ff-macros" }
ark-std = { version = "0.5.0", default-features = false }
primitive-types = "0.13.1"
indicatif = "0.17"


