[package]
name = "minimal_mult"
version = "0.1.0"
edition = "2024"

[dependencies]
seq-macro = "0.3.5"
ark-std = { version = "0.5.0", default-features = false }
primitive-types = "0.13.1"
indicatif = "0.17"
ark-ff = { git = "https://github.com/abiswas3/arkworks-algebra.git", branch = "yuvals-mont-mult" }
ark-ff-macros = { git = "https://github.com/abiswas3/arkworks-algebra.git", branch = "yuvals-mont-mult" }

[lib]
name = "minimal_mult"
path = "src/main.rs"


